# TGX

./: .gitignore  404.html  README.md  dt3522138.txt  dt3522138error.txt  dt3522150.txt  dt3522150error.txt  dt3522155.txt  dt3522155error.txt  dt3522160.txt  dt3522160error.txt  dt3618561.txt  dt3618561error.txt  dt3618657.txt  dt3618657error.txt  dt3619061.txt  dt3619061error.txt  env.sh  full_requirements.txt  g.txt  index.html  main-.py  mkdocs.yml  mm.py  objects.inv  pyproject.toml  requirements.txt  run.sh  s.py  setup.cfg  setup.py  sitemap.xml  starting_example.py
.cache/matplotlib/: fontlist-v330.json
.github/workflows/: ci.yml  mkdocs.yaml
classes/graph/: index.html
contribute/: index.html
data/: ml_enron.csv
data/builtin/: index.html
data/tgb/: index.html
docs/: api_references.md  classes.md  contribute.md  datasets.md  index.md  io.md  readwrite.md  utils.md  vis.md
docs/api/: tgx.utils.md
docs/classes/: datasets.md  graph.md
docs/data/: builtin.md  tgb.md
docs/gallery/: 0-degree-builtin.md  0-degree-tgb.md  0-degree.md  0-node_edge-builtin.md  0-node_edge-tgb.md  0-node_edge.md  0-tea-builtin.md  0-tea-tgb.md  0-tet-builtin.md  0-tet-tgb.md  canparl.md  contact.md  dataset.md  degree.md  enron.md  flight.md  lastfm.md  mooc.md  node_edge.md  reddit.md  socialevo.md  tea copy.md  tea.md  tet copy.md  tet.md  tgbl-coin.md  tgbl-comment.md  tgbl-flight.md  tgbl-review.md  tgbl-wiki.md  tgbn-genre.md  tgbn-reddit.md  tgbn-trade.md  uci.md  unvote.md  uslegis.md
docs/io/: io.md
docs/tutorials/: Features.ipynb  TEA&TET.ipynb  data_loader.ipynb  data_viz_stats.ipynb
docs/utils/: graph_stats.md  graph_utils.md  plotting_utils.md
docs/visualizations/: vis_tea.md  vis_tet.md
docs/viz/: vis_tea.md  vis_tet.md
examples/: TEA&TET.ipynb  create_dataset.py  data_loader.ipynb  data_viz.py  discretize_ctdg.py  newtest.py  starting_example.py  test.py  test_package1.py  test_package2.py  test_paths.py
examples/.ipynb_checkpoints/: TEA&TET-checkpoint.ipynb  data_loader-checkpoint.ipynb  test-checkpoint.py
extra/: tgb_load.py
gallery/0-degree-builtin/: index.html
gallery/0-degree-tgb/: index.html
gallery/0-node_edge-builtin/: index.html
gallery/0-node_edge-tgb/: index.html
gallery/0-tea-tgb/: index.html
py_tgx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
search/: search_index.json
tgn/: TEA.py  __init__.py
tgn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tgx/: __init__.py
tutorials/: toy_data.csv
(+76 files in other folders)
