[tool.poetry]
name = "tgx"
version = "1.0"
description = "Temporal Graph Benchmark project repo"
authors = ["Razieh Shirzadkhani <razieh.shirzadkhani@gmail.com>", "shenyang Huang <shenyang.huang@mail.mcgill.ca>", "Farimah Poursafaei"]
readme = "README.md"
packages = [{include = "tgx"}]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.65.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"