[tool.poetry]
name = "py-tgx"
version = "0.1.0"
description = "Temporal Graph Analysis project repo"
authors = ["Razieh Shirzadkhani <razieh.shirzadkhani@gmail.com>", "shenyang Huang <shenyang.huang@mail.mcgill.ca>", "Elahe Kooshafar", "Farimah Poursafaei"]
readme = "README.md"
packages = [{include = "tgx"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib="^3.8.0"
pandas="^2.1.1"
numpy="^1.26.0"
seaborn="^0.13.0"
tqdm="^4.66.1"
scikit-learn="^1.3.1"
tgb="^0.9.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
mkdocstrings-python = "^1.1.2"
mkdocs-jupyter = "^0.24.1"
poetry = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/fpour/TGX"