[metadata]
name = py-tgx
version = 0.1.1
author = ["Razieh Shirzadkhani <razieh.shirzadkhani@gmail.com>", "shenyang Huang <shenyang.huang@mail.mcgill.ca>", "Elahe Kooshafar", "Farimah Poursafaei"]
author_email = razieh.shirzadkhani@gmail.com
description = Temporal Graph Analysis project repo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fpour/TGX
project_urls =
    Bug Tracker = https://github.com/fpour/TGX/issues
classifiers =
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.6

